tests/compile-fail/generic_event_where_without_parameters.rs
use sml::sml;

sml! {
    WhereWithoutParameters
    where
        T: Clone,
    {
        *Idle + Event = Idle,
    }
}

fn main() {}
